...
  };

  return (
    <GestureRecognizer
      onSwipeLeft={handleSwipeLeft}
      onSwipeRight={handleSwipeRight}
      testID="gesture-handler">
      <ScrollView contentContainerStyle={styles.container}>
        <TouchableOpacity onPress={handleImageUpload} testID="upload-image-button">
          <Image source={{uri: photoUrl}} style={styles.clientPhotoLarge} />
        </TouchableOpacity>
        <Text style={styles.clientName}>
          {client.firstName} {client.lastName}
...
            onPress={() => handleStatusChange('Completed')}
            style={
              status === 'Completed'
                ? styles.selectedButton
                : styles.statusButton
            }
            testID="status-button-completed"
            >
            Completed
          </Button>
          <Button
            mode="contained"
            onPress={() => handleStatusChange('Refused')}
...
